Change pixels to percents, fix spacing

--- a/src/main/webapp/chatStyle.css
+++ b/src/main/webapp/chatStyle.css
@@ -1,18 +1,18 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
 
-/* Button used to open the chat form - fixed at the bottom of the page */
+/* Button used to open the chat form - fixed at the top of the page */
 .open-button {
   background-color: #555;
   color: white;
-  padding: 16px 20px;
+  padding: 1.12% 1.5%;
   border: none;
   cursor: pointer;
   opacity: 0.8;
   position: fixed;
-  top: 23px;
-  right: 28px;
-  width: 280px;
+  top: 2%;
+  right: 2%;
+  width: 11%;
 }
 
 /* The popup chat - hidden by default */
@@ -20,7 +20,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   display: none;
   position: fixed;
   top: 0;
-  right: 15px;
+  right: 1%;
   border: 3px solid #f1f1f1;
   z-index: 9;
 }
@@ -28,20 +28,23 @@ body {font-family: Arial, Helvetica, sans-serif;}
 /* Add styles to the form container */
 .form-container {
   max-width: 300px;
-  padding: 10px;
+  width: 100%;
+  padding: 4%;
   background-color: white;
-  min-height: 600px;
+  max-height: 600px;
+  height: 100%
 }
 
 /* Full-width textarea */
 .form-container textarea {
   width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
+  padding: 5%;
+  margin: 3% 0 5% 0;
   border: none;
   background: #f1f1f1;
   resize: none;
-  min-height: 100px;
+  max-height: 100px;
+  height: 70%;
 }
 
 /* When the textarea gets focus, do something */
@@ -54,11 +57,11 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .form-container .btn {
   background-color: #BDBDBD;
   color: white;
-  padding: 16px 20px;
+  padding: 4% 5%;
   border: none;
   cursor: pointer;
   width: 100%;
-  margin-bottom:10px;
+  margin-bottom: calc(100% -5px);
   opacity: 0.8;
 }
 
